--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -9,4 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="software33.tagmatch.MainChatActivity">
 
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
 </RelativeLayout>
