--- a/app/src/main/res/layout/actionbar_single_chat.xml
+++ b/app/src/main/res/layout/actionbar_single_chat.xml
@@ -6,21 +6,23 @@
     android:orientation="horizontal" >
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:id="@+id/singleChatImage"
-        android:layout_gravity="center" />
+        android:layout_gravity="left|center_vertical"
+        android:scaleType="fitCenter" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:paddingLeft="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left|center"
             android:textColor="#ffffff"
             android:id="@+id/singleChatUserName"
             android:textSize="18dp" />
@@ -30,7 +32,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:id="@+id/singleChatTitleProduct"
-            android:layout_gravity="center" />
+            android:layout_gravity="left|center" />
     </LinearLayout>
 
 </LinearLayout>
