--- a/app/src/main/res/layout/activity_single_chat.xml
+++ b/app/src/main/res/layout/activity_single_chat.xml
@@ -20,13 +20,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:background="#ffffff">
 
         <EditText
             android:id="@+id/msg"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:hint="@string/hint_single_chat"
+            android:background="#ffffff"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" />
 
         <Button
             android:id="@+id/send"
