--- a/app/src/main/res/layout/activity_single_chat.xml
+++ b/app/src/main/res/layout/activity_single_chat.xml
@@ -13,8 +13,9 @@
         android:layout_weight="1"
         android:background="@null"
         android:divider="@null"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"></ListView>
+        android:stackFromBottom="false"
+        android:transcriptMode="alwaysScroll"
+        android:padding="5dp"></ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
