--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -32,11 +32,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.12" />
 
-    <com.google.android.gms.maps.MapView
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:id="@+id/registrationMap"
-        android:layout_width="wrap_content"
-        android:layout_height="125dp"
-        android:layout_weight="0.8" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <Button
         android:layout_width="wrap_content"
