--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -86,7 +86,8 @@
             android:layout_marginBottom="14dp"
             android:text="@string/registration_login"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:textSize="16dip"
+            android:onClick="backToLogin" />
 
     </LinearLayout>
 
