--- a/app/src/main/res/layout/content_new_advertisement.xml
+++ b/app/src/main/res/layout/content_new_advertisement.xml
@@ -12,7 +12,7 @@ android:paddingBottom="@dimen/activity_vertical_margin"
 android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="software33.tagmatch.NewAdvertisement">
+tools:context=".Advertisement.NewAdvertisement">
 
 <LinearLayout
     android:orientation="vertical"
@@ -29,14 +29,6 @@ tools:context="software33.tagmatch.NewAdvertisement">
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/advertImages"
-            android:src="@drawable/image_placeholder"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/newImage"/>
-
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
@@ -44,6 +36,16 @@ tools:context="software33.tagmatch.NewAdvertisement">
             android:text="+"
             android:id="@+id/newImage"
             android:layout_alignParentEnd="true" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/advertImages"
+            android:src="@drawable/image_placeholder"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/newImage"/>
+
+
     </RelativeLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -107,12 +109,12 @@ tools:context="software33.tagmatch.NewAdvertisement">
         <EditText android:id="@+id/input_hashtags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
+            android:inputType="textCapWords"
             android:hint="@string/input_hashtags"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_newAdvert"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
