--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -1,71 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="software33.tagmatch.RegistrationActivity2"
-    android:weightSum="1">
+    android:fitsSystemWindows="true"
+    tools:context="software33.tagmatch.RegistrationActivity2">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/registration_profile_foto"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal" />
-
-    <ImageView
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal"
-        android:baselineAlignBottom="false"
-        android:contextClickable="false" />
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_search_button"
-        android:id="@+id/gallerySearch"
-        android:layout_gravity="center_horizontal"
-        android:onClick="addPhoto" />
-
-    <Space
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.40" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/registration_default_sell_location"
-        android:id="@+id/textView4"
-        android:layout_gravity="center_horizontal" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.76" />
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:name="com.google.android.gms.maps.MapFragment"
-        android:id="@+id/registrationMap"
-        android:layout_width="match_parent"
-        android:layout_height="190dp" />
+    </android.support.design.widget.AppBarLayout>
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_end_registrer"
-        android:id="@+id/endRegister"
-        android:layout_gravity="center_horizontal"
-        android:onClick="endRegistrer" />
+    <include layout="@layout/content_registration2" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
