--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="software33.tagmatch.RegistrationActivity2">
+    tools:context=".Login_Register.RegistrationActivity2">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
