--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="software33.tagmatch.MainChatActivity">
+    tools:context=".Chat.MainChatActivity">
 
     <ListView
         android:id="@+id/list"
