--- a/app/src/main/res/layout/content_registration2.xml
+++ b/app/src/main/res/layout/content_registration2.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="software33.tagmatch.RegistrationActivity2"
+    tools:context=".Login_Register.RegistrationActivity2"
     android:weightSum="1"
     android:background="@color/back_color" >
 
