arreglats errors de la navigation bar de cristina :(

--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -18,10 +18,22 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="software33.tagmatch.MainActivity"
+        tools:showIn="@layout/nav_activity_main">
+
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
