--- a/app/src/main/res/layout/activity_pag_principal.xml
+++ b/app/src/main/res/layout/activity_pag_principal.xml
@@ -36,27 +36,11 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/chat_button"
+            android:text="TODO"
             android:id="@+id/xat"
             android:layout_below="@+id/textView"
             android:layout_centerHorizontal="true"
             android:onClick="startMainChatActivity" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LOGOUT"
-            android:id="@+id/logout"
-            android:layout_below="@+id/xat"
-            android:layout_alignStart="@+id/xat" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nou Anunci"
-            android:id="@+id/anunci"
-            android:layout_below="@+id/logout"
-            android:layout_alignStart="@+id/logout" />
 
     </RelativeLayout>
 
