--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TODO"
-            android:id="@+id/xat"
+            android:id="@+id/xat_profile"
             android:layout_below="@+id/textView"
             android:layout_centerHorizontal="true"
             android:onClick="startMainChatActivity" />
