--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -26,7 +26,7 @@
         android:layout_height="match_parent"
         android:paddingTop="?attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="software33.tagmatch.MainActivity"
+        tools:context=".Home"
         tools:showIn="@layout/nav_activity_main">
 
     <ListView
