--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -51,6 +51,13 @@
                 android:contextClickable="false" />
         </LinearLayout>
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:src="@drawable/image0"
+            android:layout_alignParentRight="true" />
+
     </RelativeLayout>
     </android.support.v7.widget.CardView>
 
