--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -22,7 +22,7 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -33,7 +33,8 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="software33.tagmatch.MainActivity"
-        tools:showIn="@layout/nav_activity_main">
+        tools:showIn="@layout/nav_activity_main"
+        android:orientation="vertical">
 
         <Button
             android:layout_width="wrap_content"
@@ -44,6 +45,6 @@
             android:layout_centerHorizontal="true"
             android:onClick="startMainChatActivity" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
 
