--- a/app/src/main/res/layout/activity_pag_principal.xml
+++ b/app/src/main/res/layout/activity_pag_principal.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Home">
+    tools:context=".AdCards.Home">
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".Home"
+        tools:context=".AdCards.Home"
         tools:showIn="@layout/nav_activity_main">
 
     </RelativeLayout>
