--- a/app/src/main/res/layout/content_pag_principal.xml
+++ b/app/src/main/res/layout/content_pag_principal.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:screenOrientation="portrait"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Home"
+    tools:context=".AdCards.Home"
     tools:showIn="@layout/activity_pag_principal"
     android:id="@+id/rl">
 
