--- a/app/src/main/res/layout/activity_pag_principal.xml
+++ b/app/src/main/res/layout/activity_pag_principal.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_menu_add" />
+        android:src="@drawable/abc_ic_search_api_mtrl_alpha" />
 
 
 </android.support.design.widget.CoordinatorLayout>
